[gd_scene load_steps=8 format=3 uid="uid://bs2a730k3etf4"]

[ext_resource type="Script" uid="uid://ddiwo6yyhfkuc" path="res://Components/Levels/level.gd" id="1_l3jbk"]
[ext_resource type="PackedScene" uid="uid://lrodaawkgfob" path="res://Components/UI/VFX/undo_particles.tscn" id="2_v3rhw"]
[ext_resource type="PackedScene" uid="uid://ddpx53m5n63yb" path="res://Components/Levels/Backgrounds/bg-normal-1.tscn" id="3_l3jbk"]
[ext_resource type="PackedScene" uid="uid://ccncnjkm8w8ta" path="res://Components/Creatures/creature_blue.tscn" id="5_ud11g"]
[ext_resource type="PackedScene" uid="uid://be6k5yjppap8y" path="res://Components/Creatures/creature_yellow.tscn" id="6_jdj0p"]
[ext_resource type="PackedScene" uid="uid://g3u7bc1jo6gj" path="res://Components/Player/player.tscn" id="7_3n0l5"]
[ext_resource type="PackedScene" uid="uid://dtrjxhb3ayo1c" path="res://Components/Levels/LevelUI.tscn" id="7_ggy0l"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_l3jbk")
undo_particles = ExtResource("2_v3rhw")
level_number = 1

[node name="BackgroundNormal1" parent="." instance=ExtResource("3_l3jbk")]

[node name="Creature" type="Node" parent="."]

[node name="CreatureBlue" parent="Creature" instance=ExtResource("5_ud11g")]
position = Vector2(288, 288)

[node name="CreatureYellow" parent="Creature" instance=ExtResource("6_jdj0p")]
position = Vector2(416, 288)

[node name="Player" type="Node" parent="."]

[node name="Player" parent="Player" instance=ExtResource("7_3n0l5")]
position = Vector2(352, 480)

[node name="LevelUI" parent="." instance=ExtResource("7_ggy0l")]

[editable path="Creature/CreatureBlue"]
